--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>StVR Fundraising</title>
+    <title>Dad Jokes</title>
     <link rel="stylesheet" href="css/about.css">
 </head>
 
@@ -12,7 +12,7 @@
     <header>
         <section class="header">
             <h3 id="top" class="logo">
-                <a href="index.html">VRFunder</a>
+                <a href="index.html">Dad Jokes</a>
             </h3>
 
             <!-- <h3 class="tagline">Please check out our Kickstarter.</h3> -->
@@ -21,7 +21,7 @@
             <nav class="primary-nav">
                 <a href="/index.html">Home</a>
                 <a href="/about.html">About Us</a>
-                <a href="https://vrfunder-app.netlify.com/">Log In/ Register</a>
+                <a href="https://webpt9-dadjokes6.netlify.com/">Log In/ Register</a>
             </nav>
 
         </section>
@@ -29,30 +29,47 @@
 
     <section class="main">
 
-
+    <div class="top">
+        <p>You're a funny guy, but you keep losing your list of jokes and forgetting which ones got the most groans! Well worry no more - with the DadJokes app, a cornucopia of dadtasticness is at your fingertips. Why did the chicken _really_ cross that road? See what other jokesters have to say in the public Joke feed. Overhear a real knee-slapper on the L train? Just whip out your phone, pop open our app, and save it to your private collection for posterity. Sitting in a bar and a string walks through the door and sits down next to you? Dads Jokes has got you covered with a real zinger for every situation! </p>
+                </div>
 
         <div class="card">
             <!-- <a href=#> -->
             <!-- <img src=""> -->
-            <h3>Ryan</h3>
-            <p>After graduating from MIT at the age of 14, Ryan spent his days solving problem for NASA, and his evenings playing the flaming bagpipes in a punk rock band. Eventually he grew bored, and turned his attention to Virtual Reality.</p>
+            <h3>Brandon Franks</h3>
+            <p></p>
+            <!-- </a> -->
+        </div>
+
+        <div class="card">
+            <!-- <a href=#> -->
+            <!-- <img src=""> -->
+            <h3>Brian Hague</h3>
+            <p></p>
             <!-- </a> -->
         </div>
 
         <div class="card">
             <!-- <a href="">
                 <img src=""> -->
-            <h3>Cole</h3>
-            <p>Accepted into Hogwarts School of Witchcft and Wizardry at age 11, on his graduation Cole joined the Ministry as an Auror. After the defeat of the dark lord however, there was no longer any challenge, so he too turn his attention to the Muggle
-                feild of Virtual Reality.</p>
+            <h3>Doug Little</h3>
+            <p></p>
             <!-- </a> -->
         </div>
 
         <div class="card me">
             <!-- <a href="">
         <img src=""> -->
-            <h3>Doug</h3>
-            <p>After spending most of the last thirty years in a drunken stupor, Doug rejects your reality, and replaces it with a Virtual one.</p>
+            <h3>Liam Edlinger</h3>
+            <p></p>
+            <!-- </a> -->
+        </div>
+
+        <div class="card me">
+            <!-- <a href="">
+        <img src=""> -->
+            <h3>Nicholas Gonzales</h3>
+            <p></p>
             <!-- </a> -->
         </div>
         <!-- 	
@@ -75,7 +92,7 @@
             <a class="mobile-footer" href="#top">Back to Top</a>
         </nav>
 
-        <small>&copy; VRFunder</small>
+        <small>&copy; Dad Jokes</small>
     </footer>
 </body>
 
