--- a/about.html
+++ b/about.html
@@ -34,43 +34,49 @@
                 </div>
 
         <div class="card">
-            <!-- <a href=#> -->
-            <!-- <img src=""> -->
+
             <h3>Brandon Franks</h3>
             <p></p>
-            <!-- </a> -->
+              <img src="img/Brandon.jfif"><br><br>
+              <h4>
+                <a href="https:\\github.com/bgfranks" target="_blank">GitHub </a>
+            </h4>
         </div>
 
         <div class="card">
-            <!-- <a href=#> -->
-            <!-- <img src=""> -->
             <h3>Brian Hague</h3>
             <p></p>
-            <!-- </a> -->
+              <img src="img/Brian.png"><br><br>
+              <h4>
+                <a href="https:\\github.com/alphaseinor" target="_blank">GitHub </a> 
+            </h4>
         </div>
 
         <div class="card">
-            <!-- <a href="">
-                <img src=""> -->
             <h3>Doug Little</h3>
             <p></p>
-            <!-- </a> -->
+              <img src="img/Doug.jpg"><br><br>
+              <h4>
+                <a href="https://github.com/dlittle-525" target="_blank">GitHub</a>
+            </h4>
         </div>
 
         <div class="card me">
-            <!-- <a href="">
-        <img src=""> -->
             <h3>Liam Edlinger</h3>
             <p></p>
-            <!-- </a> -->
+              <img src="img/Liam.jpg"><br><br>
+              <h4>
+                <a href="https:\\github.com/LiamColeE" target="_blank">GitHub </a>
+            </h4>
         </div>
 
         <div class="card me">
-            <!-- <a href="">
-        <img src=""> -->
             <h3>Nicholas Gonzales</h3>
             <p></p>
-            <!-- </a> -->
+              <img src="img\Niccolas.jfif"><br><br>
+              <h4>
+                <a href="https://github.com/NickGonzalez04" target="_blank">GitHub </a>
+            </h4>
         </div>
         <!-- 	
 		<div class="card"><a href =#>
@@ -83,17 +89,17 @@
 
     </section>
 
-    <footer class="primary-footer container group">
+    <!-- <footer class="primary-footer container group">
 
         <nav>
             <a class="main-footer" href="index.html">Home</a>
             <a class="main-footer" href="about.html">About Us</a>
-            <a class="main-footer" href="https://vrfunder-app.netlify.com/">Log in/Register</a>
+            <a class="main-footer" href="https://webpt9-dadjokes6.netlify.com/">Log in/Register</a>
             <a class="mobile-footer" href="#top">Back to Top</a>
         </nav>
 
         <small>&copy; Dad Jokes</small>
-    </footer>
+    </footer> -->
 </body>
 
 </html>
